Trying to fix img not showing on github pages

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -55,7 +55,7 @@ border-top-left-radius: 10px;
 border-bottom-left-radius: 0px;
 border-top-right-radius: 10px;
 border-bottom-right-radius: 0px;
-background-image:url("./assets/css/image-product-mobile.jpg");
+background-image:url("assets/css/image-product-mobile.jpg");
 background-repeat:no-repeat;
 background-size:100% auto;
 width:100%;
@@ -144,7 +144,7 @@ flex-direction:row;
 }
 
 .imgcontainer{
-background-image:url("./assets/css/image-product-desktop.jpg");
+background-image:url("assets/css/image-product-desktop.jpg");
 background-repeat:no-repeat;
 background-size:cover;
 min-height:100%;
